--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-items social-icons">
                         <div class="nav-social">
-                            <a href="" class="nav-link">
+                            <a href="https://github.com/gautam8454" class="nav-link">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://www.linkedin.com/in/gautamkumar-gupta-00b182215" class="nav-link">
@@ -223,7 +223,7 @@
 
                         <div class="contact-section-icon">
                             <div class="contact-icons">
-                                <a href="" target="_blank">
+                                <a href="https://github.com/gautam8454" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
